<resources>
    <string name="app_name">Go4Lunch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="title_settings">Settings</string>
    <string name="logout">LOGOUT</string>
    <string name="user_name">Username</string>
    <string name="user_mail_adress">User mail address</string>
    <string name="menu_search">search</string>.

    <!-- RESTAURANT ACTIVITY -->
    <string name="empty_restaurant">You didn\'t choose a restaurant !</string>
    <string name="open_until">"Open until "</string>
    <string name="closed_restaurant">Restaurant is closed</string>
    <string name="is_eating_at">" is eating at "</string>
    <string name="not_decided_yet">" hasn't decided yet"</string>
    <string name="opening_hour">Opening hours</string>
    <string name="restaurant_distance">distance</string>
    <string name="eating_number">2</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">You have to be connected !</string>
    <string name="error_authentication_canceled">Authentification canceled&#8230;</string>
    <string name="error_no_internet">No internet !</string>
    <string name="error_unknown_error">Unknown error &#8230;</string>
    <string name="connection_succeed">Connection succeeded !</string>
    <string name="button_login_text_logged">Show profile</string>
    <string name="button_login_text_not_logged">Connexion</string>
    <string name="restaurant_search_hint">Choose a Restaurant</string>

    <!-- LOGIN ACTIVITY -->
    <string name="title_sign_in">Sign in</string>
    <string name="toolbar_title_login_activity">Your Profile</string>
    <string name="text_input_username">Username</string>
    <string name="text_view_email">Mail address :</string>
    <string name="button_update_account">Update username</string>
    <string name="button_delete_account">Delete my account</string>
    <string name="button_sign_out_account">Log out</string>
    <string name="info_no_email_found">No mail address</string>
    <string name="info_no_username_found">No username</string>
    <string name="popup_message_confirmation_delete_account">Are you sure about deleting your account ?</string>
    <string name="popup_message_choice_yes">Yes !</string>
    <string name="popup_message_choice_no">No</string>

    <!-- NavigationDrawer text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title">Go4Lunch</string>
    <string name="user_picture">user picture</string>
    <string name="restaurant_name">restaurant_name</string>
    <string name="call">CALL</string>
    <string name="like">LIKE</string>
    <string name="website">WEBSITE</string>
    <string name="is_joining">" is joining"</string>
    <string name="name_is_joining">name is joining</string>
    <string name="restaurant">Restaurant</string>
    <string name="address_restaurant">address restaurant</string>

    <!-- MAP -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">921003241950626</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb921003241950626</string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="notification_title">"You have a notification"</string>

    <!-- SETTINGS -->
    <string-array name="language_names">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>fr</item>
    </string-array>
    <string name="current_language">English</string>
    <string name="language_title">Language</string>

    <string name="report_technical">Report technical issues or suggest new features</string>
    <string name="enable_message_notifications">Enable message notifications</string>
    <string name="send_feedback">Send feedback</string>

</resources>