<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/group1">
        <item
            android:id="@+id/navigation_drawer_lunch"
            android:enabled="true"
            android:icon="@drawable/ic_lunch"
            android:title="@string/your_lunch" />
        <item
            android:id="@+id/navigation_drawer_settings"
            android:enabled="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navigation_drawer_logout"
            android:enabled="true"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>