<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment_restaurant_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    tools:context=".ui.RestaurantActivity">

    <TextView
        android:id="@+id/activity_restaurant_empty_id_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/empty_restaurant"
        android:textSize="22sp"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/ic_sad_face" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_restaurant_complete_id_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:context=".ui.RestaurantActivity">

        <ImageView
            android:id="@+id/activity_restaurant_image"
            android:layout_width="0dp"
            android:layout_height="270dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/restaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/activity_restaurant_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_image">

            <TextView
                android:id="@+id/activity_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/restaurant_name"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/activity_restaurant_rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/activity_restaurant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:textColor="@color/white"
            android:text="@string/address_restaurant"
            android:paddingHorizontal="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_details" />


        <TextView
            android:id="@+id/activity_restaurant_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:drawablePadding="10dp"
            android:focusable="true"
            android:padding="20dp"
            tools:text="@string/call"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toStartOf="@+id/activity_restaurant_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_address" />

        <TextView
            android:id="@+id/activity_restaurant_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/orange"
            android:clickable="true"
            android:focusable="true"
            tools:text="@string/like"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_phone"
            app:layout_constraintEnd_toStartOf="@+id/activity_restaurant_website"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_address" />

        <TextView
            android:id="@+id/activity_restaurant_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:drawablePadding="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/orange"
            android:clickable="true"
            android:focusable="true"
            tools:text="@string/website"
            app:layout_constraintStart_toEndOf="@+id/activity_restaurant_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_address"/>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_restaurant_chosen_ActionButton"
            android:layout_width="59dp"
            android:layout_height="56dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/white"
            app:elevation="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_restaurant_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_image"
            tools:ignore="ContentDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_restaurant_list_workmates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_phone"
            tools:itemCount="5"
            tools:listitem="@layout/item_workmate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
