<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_restaurant_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.RestaurantActivity">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="0dp"
            android:layout_height="270dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/restaurant_details_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_image">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:text="@string/restaurant_name"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/restaurant_rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

            <TextView
                android:id="@+id/restaurant_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:paddingHorizontal="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_details_1"
                tools:text="TextView" />

        <!-- <LinearLayout
            android:id="@+id/restaurant_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_address">
            -->


            <TextView
                android:id="@+id/restaurant_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/orange"
                app:drawableTopCompat="@drawable/ic_phone"
                tools:text="@string/call"
                app:layout_constraintEnd_toStartOf="@+id/restaurant_like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_address"/>

            <TextView
                android:id="@+id/restaurant_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/orange"
                app:drawableTopCompat="@drawable/ic_like"
                tools:text="@string/like"
                app:layout_constraintStart_toEndOf="@+id/restaurant_number"
                app:layout_constraintEnd_toStartOf="@+id/restaurant_website"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_address"/>

            <TextView
                android:id="@+id/restaurant_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/orange"
                app:drawableTopCompat="@drawable/ic_website"
                tools:text="@string/website"
                app:layout_constraintStart_toEndOf="@+id/restaurant_like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_address"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_number"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_ActionButton"
            android:layout_width="59dp"
            android:layout_height="56dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/white"
            app:elevation="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/restaurant_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_image"
            tools:ignore="ContentDescription" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_number"
            tools:itemCount="5"
            tools:listitem="@layout/item_workmate" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
